# langchain-integration-for-sap-hana-cloud

./: .git-blame-ignore-revs  Makefile  README.md  pyproject.toml
.github/actions/poetry_setup/: action.yml
.github/scripts/: check_prerelease_dependencies.py
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: setup_guide.md
examples/: hanavector_self_query.ipynb  sap_hana_rdf_graph.ipynb  sap_hana_sparql_qa_agent.ipynb  sap_hana_sparql_qa_chain.ipynb  sap_hanavector.ipynb
langchain_hana/: __init__.py  utils.py  vectorstores.py
langchain_hana/agents/: __init__.py
langchain_hana/agents/graph_qa/: __init__.py  hana_sparql_qa_agent.py  prompts.py
langchain_hana/chains/graph_qa/: hana_sparql_qa_chain.py  prompts.py  sparql_qa_chain.py
langchain_hana/embeddings/: hana_internal_embeddings.py
langchain_hana/graphs/: hana_rdf_graph.py
langchain_hana/vectorstores/: __init__.py  create_where_clause.py  hana_db.py  hana_reranker.py  utils.py
langchain_sap_hana_cloud/: __init__.py  embeddings.py  vectorstores.py
tests/integration_tests/: hana_test_constants.py  hana_test_utils.py  test_graphs.py  test_hana_db.py  test_hana_db_internal_embeddings.py  test_hana_rdf_graph.py  test_hana_reranker.py  test_vectorstores.py  test_vectorstores_internal_embedding.py
tests/integration_tests/fixtures/: filtering_test_cases.py  hana_rdf_graph_sample_schema.ttl
tests/unit_tests/: test_create_where_clause.py  test_hana_db.py  test_hana_rdf_graph.py  test_hana_sparql_qa_chain.py  test_hana_translator.py  test_query_constructors.py  test_vectorstores.py  test_where_clause_builder.py
