[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-hana"
version = "1.0.0"
description = "An integration package connecting SAP HANA Cloud and LangChain"
authors = []
readme = "README.md"
license = "Apache-2.0"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^1.0.0"
langchain-classic = "^1.0.0"
langchain = "^1.0.0"
hdbcli = "^2.23.24"
rdflib = "7.0.0"

[[tool.poetry.dependencies.numpy]]
version = ">=1.26.4"
python = "<3.13"

[[tool.poetry.dependencies.numpy]]
version = ">=2.1.0"
python = ">=3.13"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
