[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-hana"
version = "1.1.0"
description = "An integration package connecting SAP HANA Cloud and LangChain"
authors = []
readme = "README.md"
license = "Apache-2.0"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^1.0.0"
langchain-classic = "^1.0.0"
langchain = "^1.0.0"
hdbcli = "^2.23.24"
rdflib = "^7.0.0"

[[tool.poetry.dependencies.numpy]]
version = ">=1.26.4"
python = "<3.13"

[[tool.poetry.dependencies.numpy]]
version = ">=2.1.0"
python = ">=3.13"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["T201", "F821"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.2"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.6.3"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"
mdformat = "^1.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-colorama = "^0.4.15"
types-defusedxml = "^0.7.0"
types-docutils = "^0.22.3"
types-hdbcli = "^2.25.0"
types-pexpect = "^4.9.0"
types-psutil = "^7.2.2"
types-pycurl = "^7.45.7"
types-Pygments = "^2.20.0"
types-PyYAML = "^6.0.12"
types-regex = "^2026.4.4"
types-requests = "^2.33.0"
